@@ -1,11 +1,13 @@
-package com.currencyexchange.currency;
+package com.currencyexchange.business;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
-import com.currencyexchange.currency.model.Currency;
+import com.currencyexchange.model.Currency;
+import com.currencyexchange.repository.CurrencyRepository;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -23,29 +25,28 @@ public class CurrencyServiceTest {
 
   @Test
   void testGetAllCurrencies_shouldReturnListOfCurrencyCodes() {
+    when(currencyRepository.findAll()).thenReturn(List.of(
+        new Currency(null, "USD"), new Currency(null, "EUR")));
+    Set<String> result = currencyService.getAllCurrencies();
 
-    Currency currency1 = new Currency(null, "USD");
-    Currency currency2 = new Currency(null, "EUR");
-
-    when(currencyRepository.findAll()).thenReturn(List.of(currency1, currency2));
-    List<String> result = currencyService.getAllCurrencies();
-    assertThat(result).containsExactly("USD", "EUR");
+    assertThat(result).containsExactlyInAnyOrder("USD", "EUR");
   }
 
   @Test
   void testGetAllCurrencies_shouldReturnEmptyListWhenNoCurrencies() {
-
     when(currencyRepository.findAll()).thenReturn(Collections.emptyList());
-    List<String> result = currencyService.getAllCurrencies();
+    Set<String> result = currencyService.getAllCurrencies();
+
     assertThat(result).isEmpty();
   }
 
   @Test
   void testGetAllCurrencies_shouldHandleSingleCurrency() {
 
-    List<Currency> currencies = Collections.singletonList(new Currency(null, "USD"));
+    List<Currency> currencies = List.of(new Currency(null, "USD"));
     when(currencyRepository.findAll()).thenReturn(currencies);
-    List<String> result = currencyService.getAllCurrencies();
+    Set<String> result = currencyService.getAllCurrencies();
+
     assertThat(result).containsExactly("USD");
   }
 }
